--- a/packaging/supervisor.conf.template
+++ b/packaging/supervisor.conf.template
@@ -14,13 +14,13 @@ loglevel = info
 logfile = {log_dir}/supervisord.log
 logfile_maxbytes = 50MB
 nodaemon = false
-pidfile = /var/run/monasca-agent-supervisord.pid
+pidfile = /var/run/monasca/agent-supervisord.pid
 logfile_backups = 10
 
 [program:collector]
 command={prefix}/bin/monasca-collector foreground
-stdout_logfile=NONE
-stderr_logfile=NONE
+stdout_logfile={log_dir}/collector.log
+stderr_logfile={log_dir}/collector.log
 priority=999
 startsecs=2
 user={monasca_user}
@@ -28,8 +28,8 @@ autorestart=true
 
 [program:forwarder]
 command={prefix}/bin/monasca-forwarder
-stdout_logfile=NONE
-stderr_logfile=NONE
+stdout_logfile={log_dir}/forwarder.log
+stderr_logfile={log_dir}/forwarder.log
 startsecs=3
 priority=998
 user={monasca_user}
@@ -37,8 +37,8 @@ autorestart=true
 
 [program:statsd]
 command={prefix}/bin/monasca-statsd
-stdout_logfile=NONE
-stderr_logfile=NONE
+stdout_logfile={log_dir}/statsd.log
+stderr_logfile={log_dir}/statsd.log
 startsecs=3
 priority=998
 user={monasca_user}
